--- a/sk2.html
+++ b/sk2.html
@@ -2043,6 +2043,175 @@ LAST&rarr;		ZZLAST
 [meta file_name=102726903-05-02-acc.pdf pdf_page=57 doc_page=207 type=equalities]
 [Page header: "HHL APY5 006"]
 
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=58 doc_page=208 type=macros]
+[Page header: "HHL APY5 007"]
+[Some duplication in macros, copy-pasted from previous blocks (doc_page 167, etc).]
 
+&#9755;&#9755;DEF PROD&equiv;A&times;B/C=D&rarr;E
+LDA A
+MUL B
+DIV C
+hJOV E
+STA D
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF SUMM&equiv;A&rarr;B=C&rarr;D
+LDA A
+ADD B
+hJOV D
+STA C
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF DIFF&equiv;A&rarr;B=C&rarr;D
+LDA A
+SUB B
+hJOV D
+STA C
+&#9755;&#9755;EMD
+
+[Next two have not been seen before, assuming they are  using lowercase x and y]
+&#9755;&#9755;DEF NORMATM
+<sup>1</sup>STE NORT4	**50 (NM+4)
+REX<sub>y</sub><sub>1</sub><sub>|</sub><sub>x</sub><sub>1</sub>1
+<sup>1</sup>DPX<sub>y</sub><sub>1</sub>NORT1
+<sup>1</sup>DPX<sub>y</sub><sub>1</sub>NORT2-3
+<sup>1</sup>SPX<sub>y</sub><sub>1</sub>NORT2-1
+RSX<sub>y</sub><sub>1</sub>*NORT3
+DEX<sub>y</sub><sub>1</sub>1
+DPX NORX
+STA NORX1
+NORT1&rarr;		LDA<sub>y</sub><sub>1</sub>	**FIND |MAX|
+JPA #+2
+COM A
+SUB NORX
+JNA #+3
+ADD NORX
+STA NORX
+<sup>-</sup><sup>1</sup>JPX<sub>y</sub><sub>1</sub>NORT1
+<sup>1</sup><sup>1</sup>LDA<sub>x</sub><sub>1</sub>
+?AB {-35.,}
+<sup>1</sup><sup>5</sup>DIV <sub>x</sub><sub>1</sub>		**N
+LDE NORX1
+<sup>1</sup><sup>?</sup>SED<sub>x</sub><sub>1</sub>
+<sup>1</sup><sup>?</sup>LDA<sub>x</sub><sub>1</sub>		**M
+MUL NORX		**NEW MAX
+hMAB {35.,}
+STD NORX
+COM NORX
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=59 doc_page=209 type=macros]
+[Page header: "HHL APY5 010"]
+
+RSX<sub>y</sub><sub>1</sub>*NORT3
+JPQ NORT2
+NORX&rarr;		0
+NORX1&rarr;		0
+LDA<sub>y</sub><sub>1</sub>		**P+1
+SCA NORX
+STA<sub>y</sub><sub>1</sub>		**P+1
+NORT2&rarr;		<sup>-</sup><sup>1</sup>JPX<sub>y</sub><sub>1</sub>#-3
+NORT3&rarr;		LDA<sub>x</sub><sub>1</sub>
+<sub>3</sub><sub>2</sub>SUB NORX	*OVF?
+<sup>3</sup><sup>2</sup>STA<sub>x</sub><sub>1</sub>		*NEW EXP
+NORT4&rarr;		JPQ #
+***
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF NORMAT|P,M
+REX<sub>x</sub><sub>1</sub>* {P}
+<sup>1</sup><sup>5</sup>LDA<sub>x</sub><sub>1</sub>-M+M	[-M+M is the trick to not skip the line when M is not specified?]
+hJPQ {NORMATM}
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF HSUM&equiv;A&rarr;B=C
+LDA A
+ADD B
+SCA {-1,}
+STA C
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF MOVE|A&rarr;B
+hLDE A
+STE B
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF HDIF|P,Q&rarr;R
+LDA P
+SUB Q
+SCA {-1,}
+STA R
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF LDAE&equiv;P,Q,R,S
+LDA P
+LDB P+Q
+LDC P+R
+LDD P+S
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF STAE&equiv;P,Q,R,S
+STA P
+STB P+Q
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=60 doc_page=210 type=macros]
+[Page header: "HHL APY5 011"]
+
+STC P+R
+STD P+S
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF LDAB&equiv;P
+LDA P
+LDB P+1
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF STAB&equiv;P
+STA P
+STB P+1
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF ERROR&equiv;&alpha;&rarr;P
+hJPQ {ERROR1&equiv;&alpha;&rarr;P}
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF ERROR1&equiv;&alpha;&rarr;P
+<sup>1</sup>STE #+2
+SKZ ERRORSTOP
+<sup>1</sup>#<sub>&alpha;</sub>
+JPQ P
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF SOLVE|P&rarr;Q
+REX<sub>x</sub><sub>1</sub>* {P}
+REX<sub>x</sub><sub>2</sub>* {Q}
+h<sup>1</sup><sup>5</sup>LDE <sub>x</sub><sub>1</sub>0
+	hSED {2}
+	JPQ #+12
+hSED {3}
+JPQ #+6
+hSED {5}
+JPQ #+2
+0
+hJPQ {SOLVEM|4}
+JPQ #+4
+hJPQ {SOLVEM|2}
+	JPQ #+2
+	hJPQ {SOLVEM1}
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF ADCON&equiv;C&rarr;P
+[Problem: some symbols may be clipped by the left margin]
+DPX<sub>C</sub>A
+<sup>?</sup>DPX<sub>P</sub>A
+hJPQ ADCONER
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF &beta;&#9635;A&times;B&times;C&times;D&times;E&times;F&times;G&times;H&times;I,&alpha;
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=61 doc_page=211 type=macros]
 
 </code></pre></body></html>
