Correct an error found in LGORR definition.

--- a/sk.html
+++ b/sk.html
@@ -273,7 +273,7 @@ SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 GORREXIT=LEXIT
 <sup>1</sup>DPX<sub>X</sub><sub>R</sub>LGORR1
 <sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
-LGORR0&rarr;     <sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST-1
+LGORR0&rarr;     <sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST-1
 h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
 <sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
 INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
@@ -2628,7 +2628,7 @@ STE<sub>S</sub>LIST
 GORREXIT=LEXIT
 <sup>1</sup>DPX<sub>X</sub><sub>R</sub>LGORR1
 <sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
-LGORR0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST-1
+LGORR0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST-1
 h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
 <sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
 INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
