Fix another error in LGORR definition.

--- a/sk.html
+++ b/sk.html
@@ -279,7 +279,7 @@ h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
 INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 LGORR1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 hJPQ GORREXIT+(GORREXIT/GORREXIT&#9419;1&times;(LGORREND+1))
-<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=20 doc_page=18 type=macros]
@@ -2634,7 +2634,7 @@ h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
 INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 LGORR1&rarr;		SXD<sub>X</sub><sub>R</sub>#	** MODIFIED
 hJPQ GORREXIT+(GORREXIT/GORREXIT&#9419;1&times;(LGORREND+1))
-<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST
 <sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORR2
 hJPQ SUBR
 
@@ -3314,7 +3314,7 @@ LGORR0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><su
 	INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 LGORR1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 	hJPQ GORREXIT+(GORREXIT/GORREXIT&#9419;1&times;(LGORREND+1))
-	<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+	<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST
 	<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORR2
 	hJPQ SUBR
 
