More pages. Fix errors in earlier def of LGORR.

--- a/sk2.html
+++ b/sk2.html
@@ -555,13 +555,13 @@ STE<sub>S</sub>LIST
 GORREXIT=LEXIT
 <sup>1</sup>DPX<sub>X</sub><sub>R</sub>LGORR1
 <sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
-LGORR0&rarr;     <sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST-1
+LGORR0&rarr;     <sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST-1
 h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
 <sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
 INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 LGORR1&rarr;     SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 hJPQ GORREXIT+(GORREXIT/GORREXIT&#9419;1&times;(LGORREND+1))
-<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST
 <sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORR2
 hJPQ SUBR
 
@@ -2213,5 +2213,175 @@ hJPQ ADCONER
 
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=61 doc_page=211 type=macros]
+[Page header: "HHL APY5 012"]
+
+REX <sub>&beta;</sub>*{0<sub>&alpha;</sub>}
+RSX<sub>&beta;</sub>*{LIST+I<sub>&beta;</sub>}+(I^(370.))
+RSX<sub>&beta;</sub>*{LIST+H<sub>&beta;</sub>}+(H^(370.))
+RSX<sub>&beta;</sub>*{LIST+G<sub>&beta;</sub>}+(G^(370.))
+RSX<sub>&beta;</sub>*{LIST+F<sub>&beta;</sub>}+(F^(370.))
+RSX<sub>&beta;</sub>*{LIST+E<sub>&beta;</sub>}+(E^(370.))
+RSX<sub>&beta;</sub>*{LIST+D<sub>&beta;</sub>}+(D^(370.))
+RSX<sub>&beta;</sub>*{LIST+C<sub>&beta;</sub>}+(C^(370.))
+RSX<sub>&beta;</sub>*{LIST+B<sub>&beta;</sub>}+(B^(370.))
+RSX<sub>&beta;</sub>*{LIST+A<sub>&beta;</sub>}+(A^(370.))
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF LTAKE&equiv;N&times;XR
+		<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>2</sup>EXX<sub>S</sub><sub>|</sub><sub>T</sub>LIST
+		<sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>2</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>DPX<sub>0</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF PUTL&equiv;N&times;XR&rarr;M&times;XR2
+		<sup>1</sup><sup>2</sup>AUX<sub>X</sub><sub>R</sub>{(N)+1,,-((N)+1)}
+		<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)+1
+		<sup>2</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+		<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+		<sup>2</sup>DPX<sub>X</sub><sub>R</sub><sub>|</sub><sub>T</sub>LIST
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>1</sup><sup>1</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)
+		hJPX<sub>S</sub>#+2
+		SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
+		<sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST-1
+		<sup>1</sup><sup>1</sup>AUX<sub>X</sub><sub>R</sub>{(N)+1,,-((N)+1)}
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF MOVEL&equiv;N&times;XR&rarr;M&times;XR2
+		<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1      **TAKE
+		<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>2</sup>EXX<sub>S</sub><sub>|</sub><sub>T</sub>LIST
+		<sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>2</sup>EXX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)+1      **PUT
+		<sup>2</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>1</sup>EXX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+&#9755;&#9755;EMD
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=62 doc_page=212 type=macros]
+[Page header: "HHL APY5 013"]
+
+&#9755;&#9755;DEF PUTR&equiv;N&times;XR&rarr;M&times;XR2
+		<sup>1</sup><sup>2</sup>AUX<sub>X</sub><sub>R</sub>{(N)+1,,-((N)+1)}
+		<sup>1</sup><sup>1</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)+1
+		<sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+		<sup>1</sup><sup>2</sup>RSX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>2</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST
+        		<sup>2</sup>DPX<sub>X</sub><sub>R</sub><sub>|</sub><sub>S</sub>LIST
+        		<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>|</sub><sub>T</sub>LIST
+		<sup>1</sup><sup>1</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)
+		hJPX<sub>S</sub>#+2
+		SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
+		<sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST-1
+		<sup>1</sup><sup>1</sup>AUX<sub>X</sub><sub>R</sub>{(N)+1,,-((N)+1)}
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF MOVER&equiv;N&times;XR&rarr;M&times;XR2
+		<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1      **TAKE
+		<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>2</sup>EXX<sub>S</sub><sub>|</sub><sub>T</sub>LIST
+		<sup>2</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>EXX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)+1      **PUT
+		<sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup><sup>2</sup>RSX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>2</sup>EXX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>2</sup>DPX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF COMBL&equiv;N&times;XR&rarr;M&times;XR2
+		<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>2</sup>EXX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)+1
+		<sup>1</sup><sup>1</sup>RSX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>2</sup>DPX<sub>S</sub><sub>|</sub><sub>T</sub>LIST
+		<sup>1</sup>EXX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>EXX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>2</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF COMBR&equiv;N&times;XR&rarr;M&times;XR2
+		<sup>1</sup><sup>1</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>EXX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)+1
+		<sup>1</sup><sup>2</sup>RSX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>T</sub>LIST
+		<sup>2</sup>EXX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>1</sup><sup>1</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		<sup>2</sup>EXX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
+		<sup>2</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		[Problem: the following line is present in earlier def, but not in this one, clipped by the bottom margin? Compare with COMBL above.]
+		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=63 doc_page=213 type=macros]
+[Page header: "HHL APY5 014"]
+
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF LGORR&equiv;N&times;XR=XR2&rarr;SUBR&rarr;LEXIT
+GORREXIT=LEXIT
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub>LGORR1
+		<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+LGORR0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST-1
+		h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
+		<sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
+		INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
+LGORR1&rarr;		SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
+		hJPQ GORREXIT+(GORREXIT/GORREXIT&#9419;1&times;(LGORREND+1))
+		<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORR2
+		hJPQ SUBR
+LGORR2&rarr;		SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
+LGORREND&rarr;	JPQ LGORR0
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF LGORL&equiv;N&times;XR=XR2&rarr;SUBR&rarr;LEXIT
+GORLEXIT=LEXIT
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub>LGORL1
+		<sup>1</sup><sup>2</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+LGORL0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST-1
+		h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
+		<sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
+		INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
+LGORL1&rarr;		SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
+		hJPQ GORLEXIT+(GORLEXIT/GORLEXIT&#9419;1&times;(LGORLEND+1))
+		<sup>1</sup><sup>2</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORL2
+		hJPQ SUBR
+LGORL2&rarr;		SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
+LGORLEND&rarr;	JPQ LGORL0
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF LGORRI&equiv;N&times;XR=XR2&rarr;SUBR&rarr;LEXIT
+GORRIEXIT=LEXIT
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub>LGORRI1
+		<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+LGORRI0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST-1
+		h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
+		<sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
+		INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
+GORRI1&rarr;		SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
+		hJPQ GORRIEXIT+(GORRIEXIT/GORRIEXIT&#9419;1&times;(LGORRIEND+1))
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORRI2
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=64 doc_page=214 type=macros]
+[Page header: "HHL APY5 015"]
+
+		<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST       **CURRENT NEXT
+		hJPQ SUBR
+LGORRI2&rarr;		SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
+		<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST       ** NEW NXT
+LGORRIEND&rarr;	JPQ LGORRI0
+&#9755;&#9755;EMD
 
 </code></pre></body></html>
