--- a/sk2.html
+++ b/sk2.html
@@ -2384,4 +2384,109 @@ LGORRI2&rarr;		SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
 LGORRIEND&rarr;	JPQ LGORRI0
 &#9755;&#9755;EMD
 
+&#9755;&#9755;DEF LGORLI&equiv;N&times;XR=XR2&rarr;SUBR&rarr;LEXIT
+GORLIEXIT=LEXIT
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub>LGORLI1
+		<sup>1</sup><sup>2</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+LGORLI0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST-1
+		h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
+		<sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
+		INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
+LGORLI1&rarr;		SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
+		hJPQ GORLIEXIT+(GORLIEXIT/GORLIEXIT&#9419;1&times;(LGORLIEND+1))
+		<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORLI2
+ 		<sup>1</sup><sup>2</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST       **CURRENT NXT
+		hJPQ SUBR
+LGORLI2&rarr;		SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
+		<sup>1</sup><sup>2</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST       ** NEW NXT
+LGORLIEND&rarr;	JPQ LGORLI0
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF GOAC&equiv;C&rarr;R&rarr;S
+		<sup>1</sup>DPX<sub>C</sub>T1+1
+		RSX<sub>C</sub><sub>|</sub><sub>C</sub>LIST+TYPE
+		RSX<sub>C</sub><sub>|</sub><sub>C</sub>LIST+CHVAR
+		INX<sub>C</sub><sub>|</sub><sub>C</sub>
+		JPQ T2
+		0
+T1&rarr;		DPX<sub>C</sub>T1-1
+		INX<sub>C</sub>#
+		RSX<sub>C</sub><sub>|</sub><sub>C</sub>LIST+CVTS+2
+		hJPQ R
+		RSX<sub>C</sub>T1-1
+T2&rarr;		<sup>-</sup><sup>2</sup>JPX<sub>C</sub>T1
+		RSX<sub>C</sub>T1+1
+		JPQ S
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF SUBR&equiv;A
+		<sup>1</sup>STE SUBR1
+		A
+SUBR1&rarr;		JPQ #
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF SOLVEM|K
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=65 doc_page=215 type=macros]
+[Page header: "HHL APY5 016"]
+
+		<sup>1</sup>STE SLVDR
+		NORMAT
+		REX<sub>y</sub><sub>1</sub>(K+1)&times;K
+		INX<sub>x</sub><sub>1</sub>1
+		<sup>1</sup>DPX<sub>x</sub><sub>1</sub>SLVT3
+		<sup>1</sup>DPX<sub>x</sub><sub>1</sub>SLVT3+1
+		<sup>1</sup>DPX<sub>x</sub><sub>2</sub>SLVT5-1
+		INX<sub>x</sub><sub>2</sub>(K+1)&times;(K-1)+1
+		<sup>1</sup>DPX<sub>x</sub><sub>2</sub>SLVTR
+		<sup>1</sup>DPX<sub>x</sub><sub>1</sub>SLVTR2
+		<sup>1</sup>STA SLVT5	**N(K+1)
+		<sup>1</sup>SUB SLVT6
+		<sup>1</sup>STA SLVT5+1	**N(K+1)-1
+		<sup>1</sup>STA SLVT2+1
+		RSX<sub>x</sub><sub>2</sub>A
+SLVT2&rarr;		DEX<sub>x</sub><sub>2</sub>1
+		REX<sub>x</sub><sub>1</sub>	**N(K+1)-1
+		REX<sub>x</sub><sub>3</sub>K
+		DPX SLVTX
+SLVT3&rarr;		LDA<sub>x</sub><sub>1</sub>	**SQUARE
+		MUL<sub>x</sub><sub>2</sub>
+		DEX<sub>x</sub><sub>1</sub>K
+		DEX<sub>x</sub><sub>2</sub>K+1
+SLVT4&rarr;		ADD SLVTX
+		STA SLVTX
+		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>1</sub>SLVT3
+		STA<sub>y</sub><sub>1</sub>
+SLVT5&rarr;		INX<sub>x</sub><sub>2</sub>	**N(K+1)
+		INX<sub>x</sub><sub>1</sub>	**N(K+1)-1
+SLVT6&rarr;		DEX<sub>y</sub><sub>1</sub>1
+		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>3</sub>SLVT3-1
+		JPX<sub>y</sub><sub>1</sub>SLVT2
+		DPX SLVTS
+		<sup>1</sup>REX<sub>x</sub><sub>3</sub>K+1
+		REX<sub>x</sub><sub>1</sub>K-1
+SLVR1&rarr;		RSX<sub>x</sub><sub>2</sub>SLVT5-1
+		INX<sub>x</sub><sub>2</sub>(K+1)&times;(K-1)+1
+		<sup>1</sup>DPX<sub>x</sub><sub>2</sub>SLVTP
+		REX<sub>x</sub><sub>2</sub>K-1
+		REX<sub>y</sub><sub>1</sub>0
+		LDA<sub>x</sub><sub>1</sub>*SLVTR
+		JPA SLVR2
+		COM A
+		JPA SLVR2
+		<sup>1</sup>REX<sub>y</sub><sub>1</sub>1	**SINGULAR
+		<sup>1</sup>ADX<sub>y</sub><sub>1</sub>SLVTS
+		JPQ SLVR5+?
+SLVR2&rarr;		STA SLVTY
+SLVR3&rarr;		SXD<sub>x</sub><sub>1</sub><sub>|</sub><sub>x</sub><sub>2</sub>
+		JPQ SLVR5+2
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=66 doc_page=216 type=macros]
+[Page header: "HHL APY5 017"]
+
+
+
+
 </code></pre></body></html>
